objects/PackageTemplate__c.object
<CustomObject>
    <description>Stores the Package templates to be used in Contracts</description>
    <fields>
        <fullName>AvailableinCountries__c</fullName>
        <description>Stores the list of Countries template is available in.</description>
        <label>Available in Countries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoNotDeliver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT DELIVER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DO NOT PRINT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FreeOfCost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Of Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyTemplateId__c</fullName>
        <description>Stores the Vantive Id of the template</description>
        <externalId>true</externalId>
        <label>Legacy Template Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaxNoOfBeneficiaries__c</fullName>
        <label>Max no of Beneficiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferedPrice__c</fullName>
        <label>Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PackageDuration__c</fullName>
        <description>Duration in months</description>
        <inlineHelpText>Duration in months</inlineHelpText>
        <label>Package Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PointOfContact</description>
        <label>Point Of Contact</label>
        <referenceTo>PointOfContact__c</referenceTo>
        <relationshipLabel>Package Templates</relationshipLabel>
        <relationshipName>Package_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Points</description>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PortalAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceNumber__c</fullName>
        <label>Service Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportLevel__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_UniqueName__c</fullName>
        <description>TECH field to capture the Unique Name,value is populated by Workflow Field Update</description>
        <label>TECH_UniqueName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Package Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LegacyTemplateId__c</columns>
        <columns>MaxNoOfBeneficiaries__c</columns>
        <columns>PackageDuration__c</columns>
        <columns>FreeOfCost__c</columns>
        <columns>Status__c</columns>
        <columns>SupportLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Vantive_Templates_NA</fullName>
        <columns>NAME</columns>
        <columns>ServiceNumber__c</columns>
        <columns>LegacyTemplateId__c</columns>
        <columns>Status__c</columns>
        <columns>PortalAccess__c</columns>
        <columns>SupportLevel__c</columns>
        <columns>OfferedPrice__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegacyTemplateId__c</field>
            <operation>startsWith</operation>
            <value>AT</value>
        </filters>
        <label>Vantive Templates NA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Package Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCC_VR01_JUN19_InvalidDurationORDelivery</fullName>
        <active>true</active>
        <errorConditionFormula>OR(MaxNoOfBeneficiaries__c &lt; 0, PackageDuration__c &lt;0)</errorConditionFormula>
        <errorMessage>Max no of Beneficiaries Or Package Duration Should not be negative</errorMessage>
    </validationRules>
</CustomObject>